--- a/URA_Multiplus_V1/flow/backup/ValidacaoMultiplus.flow.2
+++ b/URA_Multiplus_V1/flow/backup/ValidacaoMultiplus.flow.2
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <AppFlowDoc>
-    <ApplicationFlow nextObjectId="105" package="flow.subflow.ValidacaoMultiplus" version="5.0">
+    <ApplicationFlow nextObjectId="106" package="flow.subflow.ValidacaoMultiplus" version="5.0">
         <FlowGraph>
             <FlowNode class="com.avaya.sce.callflow.internal.appflow.SubEntry" id="1" version="3.1">
                 <Property name="Name" value="Begin"/>
@@ -32,6 +32,16 @@
                         <FlowItem class="com.avaya.sce.callflow.internal.flowitem.LocalVariables" id="36" version="1.2">
                             <ItemProperties>
                                 <Property name="Name" value="LocalVariables"/>
+                            </ItemProperties>
+                            <ChildItems/>
+                        </FlowItem>
+                        <FlowItem class="com.avaya.sce.callflow.internal.flowitem.Assignment" id="106" version="1.2">
+                            <ItemProperties>
+                                <Property name="sourceFieldId" value="interpretation"/>
+                                <Property name="destVarId" value="WSIdentificarParticipante"/>
+                                <Property name="sourceVarId" value="ColetaCPFNumMultiplus"/>
+                                <Property name="destFieldId" value="CPFNumMultiplus"/>
+                                <Property name="type" value="assign"/>
                             </ItemProperties>
                             <ChildItems/>
                         </FlowItem>
